# ax-rag-starter

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
scripts/: load_samples.py  reindex.py
src/ax_rag/: __init__.py
src/ax_rag/api/: main.py  middleware.py
src/ax_rag/api/routes/: answer.py  ingest.py  search.py
src/ax_rag/core/: config.py  logging.py  models.py
src/ax_rag/embedding/: stub.py
src/ax_rag/ingestion/: chunker.py
src/ax_rag/retrieval/: hybrid.py
src/ax_rag/storage/: pg.py
tests/: conftest.py  test_api_smoke.py  test_chunker.py  test_embedding.py  test_retrieval.py
