[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ax-rag-starter"
version = "0.1.0"
description = "End-to-end RAG starter kit with ingestion, retrieval, and API service"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Axelliant Software Engineering", email = "info@axelliant.com" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "asyncpg>=0.30,<1",
    "pgvector>=0.3,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "python-multipart>=0.0.12",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "structlog>=24.0,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "coverage>=7,<8",
]
otel = [
    "opentelemetry-api>=1.28,<2",
    "opentelemetry-sdk>=1.28,<2",
    "opentelemetry-instrumentation-fastapi>=0.49b,<1",
]

[project.urls]
Homepage = "https://axelliant.com"
Repository = "https://github.com/axelliant/ax-rag-starter"
Issues = "https://github.com/axelliant/ax-rag-starter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ax_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
